Fixed a fault that caused the drop content areas to be too small, while increasing the spacing for empty days (in "Weekly" view).

--- a/src/calendarjs.scss
+++ b/src/calendarjs.scss
@@ -780,8 +780,7 @@ div.calendar {
                 }
 
                 div.events {
-                    margin-top: $spacing;
-                    margin-bottom: $spacing;
+                    padding: $spacing;
 
                     @import "foundation/overlay-event";
                 }
@@ -853,8 +852,7 @@ div.calendar {
                 }
 
                 div.events {
-                    margin-top: $spacing;
-                    margin-bottom: $spacing;
+                    padding: $spacing;
 
                     @import "foundation/overlay-event";
                 }
